<resources>
    <string name="app_name">Expense Deck</string>
    <string name="expenseTab">Expense</string>
    <string name="incomeTab">Income</string>
    <string name="total_balance_title">Balance</string>
    <string name="balance_amount">$999,999</string>
    <string name="total_income">Income</string>
    <string name="total_income_amount">$99,999</string>
    <string name="total_expense_amount">$99,999</string>
    <string name="total_expense">Expense</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="transaction_amount_text">-$15</string>
    <string name="transaction_name_text">Coffee at Starbucks</string>
    <string name="transaction_category_text">Food</string>
    <string name="all_income_transaction">All Income Transactions</string>
    <string name="all_expense_transaction">All Expense Transactions</string>
    <string name="total_transactions">Transactions</string>
    <string name="total_transactions_amount">15</string>
    <string name="allTab">All</string>
    <string name="summaryTab">Summary</string>
    <string name="text_title">Title</string>
    <string name="text_amount">Amount</string>
    <string name="text_type">Type</string>
    <string name="text_note">Note</string>
    <string name="text_when">When</string>
    <string name="text_tag">Tag</string>
    <string name="text_title_req">Title *</string>
    <string name="text_amount_req">Amount *</string>
    <string name="text_type_req">Type *</string>
    <string name="text_tag_req">Tag *</string>
    <string name="text_when_req">When *</string>
    <string name="text_save_transaction">Save Transaction</string>
    <string name="text_dollar">$</string>
    <string name="text_edit_transaction">Edit</string>
    <string name="text_delete_transaction">Delete</string>
    <string name="subscriptionTab">Subscriptions</string>
    <string name="goalTab">Goals</string>
    <string name="goal_slash">&#160;/&#160;&#160;&#160;&#160;</string>
    <string-array name="spinner_type_entries">
        <item>Other</item>
        <item>Stocks</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="total_goals">Goals</string>
    <string name="total_goals_amount">9</string>
    <string name="total_goals_value_text">Goals Amount</string>
    <string name="total_goals_value">$119</string>
    <string name="total_subscriptions">Subscriptions</string>
    <string name="total_subscriptions_amount">12</string>
    <string name="total_recurring">Recurring</string>
    <string name="total_recurring_amount">$99</string>
    <string name="goal_title_text">Save $500 for Vacation</string>
    <string name="goal_category_text">Savings</string>
    <string name="goal_current_amount_text">$150</string>
    <string name="goal_amount_text">$500</string>
    <string name="subscription_name_text">Netflix</string>
    <string name="subscription_category_text">Entertainment</string>
    <string name="subscription_amount_text">-$15</string>
    <string name="all_recurring_subscription">All Subscriptions</string>

    <string name="all_goals">All Goals</string>
    <string name="mainfab_goal">add goal</string>
    <string name="text_save_goal">Save Goal</string>
    <string name="text_save_subscription">Save Subscription</string>
    <string name="mainfab_desc">add transaction</string>

    <string name="expenseslist1">Expenses</string>
    <string name="incomelist1">Income</string>
    <string name="search">Search</string>
    <string name="text_startdate_req">Start Date *</string>
    <string name="text_enddate_req">End Date *</string>
    <string name="text_startdate">Start Date</string>
    <string name="text_enddate">End Date</string>
    <string name="goal_date_text">01/01 - 12/31</string>
    <string name="transaction_date_text">01/01/2000</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_google">SIGN IN WITH GOOGLE</string>
    <string name="sign_out">Sign out</string>

    <string-array name="expenseslist1">
        <item>Utilities</item>
        <item>Entertainment</item>
        <item>Healthcare</item>
        <item>Transportation</item>
        <item>Housing</item>
        <item>Investing</item>
    </string-array>

    <string-array name="incomelist1">
        <item>Utilities</item>
        <item>Entertainment</item>
        <item>Healthcare</item>
        <item>Transportation</item>
        <item>Housing</item>
        <item>Investing</item>
    </string-array>
</resources>
