<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="@color/black"
            android:minHeight="?attr/actionBarSize">
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/opensans_bold"
                android:gravity="center_vertical"
                android:minHeight="?actionBarSize"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
        </androidx.appcompat.widget.Toolbar>

<!--        <TextView-->
<!--            android:id="@+id/title"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:fontFamily="@font/opensans_bold"-->
<!--            android:gravity="center"-->
<!--            android:minHeight="?actionBarSize"-->
<!--            android:padding="@dimen/appbar_padding"-->
<!--            android:text="@string/app_name"-->
<!--            android:textColor="@color/white"-->
<!--            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />-->

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:tabMode="scrollable"
            app:tabIndicatorColor="@color/blue_500"
            app:tabTextAppearance="@style/tab_text"
            app:tabTextColor="@color/white">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/allTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allTab" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/incomeTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incomeTab" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/expenseTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expenseTab" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/summaryTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summaryTab" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/subscriptionTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subscriptionTab" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/goalTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goalTab" />
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
               android:id="@+id/view_pager"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/blue_500"
        app:srcCompat="@drawable/ic_add" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>